@@ -198,9 +198,9 @@ public class PrairieReader extends FormatReader {
     }
     if (software == null) return false;
     if (software.indexOf("Prairie") < 0) return false; // not Prairie software
-    return ifd.containsKey(new Integer(PRAIRIE_TAG_1)) &&
-      ifd.containsKey(new Integer(PRAIRIE_TAG_2)) &&
-      ifd.containsKey(new Integer(PRAIRIE_TAG_3));
+    return ifd.containsKey(Integer.valueOf(PRAIRIE_TAG_1)) &&
+      ifd.containsKey(Integer.valueOf(PRAIRIE_TAG_2)) &&
+      ifd.containsKey(Integer.valueOf(PRAIRIE_TAG_3));
   }
 
   @Override
